# rover_4wheels

./: ._setup.py  README.md  package.xml  setup.cfg  setup.py  tree_2_markdown.sh
doc/: ._readme_wheels.md  ._ros2  readme.md  readme_gamepad_controller.md  readme_software.md  readme_topics.md  readme_wheels.md
doc/ros2/: ._.preview-31D79EE5-7291-4411-9494-34F7BFC76967.html  ._.preview-38B1C245-1805-4509-9B8C-6F4962710926.html  ._.preview-59CF7D96-481F-4713-AA14-18D82767F83E.html  ._.preview-747DC899-04A8-4BC7-9E8F-A483E1074A13.html  ._ros2_commands.md  ._ros2_micro_ros_details.md  ._ros2_micro_ros_esp32.md  ._ros2_themen_welt.md  .preview-31D79EE5-7291-4411-9494-34F7BFC76967.html  .preview-38B1C245-1805-4509-9B8C-6F4962710926.html  .preview-59CF7D96-481F-4713-AA14-18D82767F83E.html  .preview-747DC899-04A8-4BC7-9E8F-A483E1074A13.html  ros2_commands.md  ros2_launch_example.md  ros2_micro_ros_details.md  ros2_micro_ros_esp32.md  ros2_themen_welt.md
install/: local_setup.sh  setup.sh
install/rover_4wheels/lib/rover_4wheels/: rover_node
install/rover_4wheels/share/rover_4wheels/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: rover_4wheels.py
log/: latest_build
rover_4wheels/: Rover.py  RoverPyGame.py
rover_4wheels/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rover_4wheels/log/: latest_build
src/doc/: readme_topics.md
src/esp32/dyna_angle_wizard/: dyna_angle_wizard.code-workspace  platformio.ini
src/esp32/esp32_dyna_wheel_mode/: esp32_dyna_wheel_mode.code-workspace  platformio.ini
(+19 files in other folders)
