<?xml version="1.0"?>
<package format="3">
  <name>rover_4wheels</name>
  <version>0.1.0</version>
  <description>Ein ROS2-Paket für den 4-Rad-Rover</description>
  <maintainer email="bernd@example.com">Bernd</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
